--- a/src/components/Title.astro
+++ b/src/components/Title.astro
@@ -1,3 +1,3 @@
-<h1 class='text-5xl font-bold first-letter:uppercase'>
+<h1 class='text-2xl sm:text-5xl font-bold first-letter:uppercase'>
 	<slot />
 </h1>
