improve details about title and posts

--- a/src/components/ListRelatedPosts.astro
+++ b/src/components/ListRelatedPosts.astro
@@ -36,7 +36,7 @@ const { posts } = Astro.props
 				)
 			})
 		) : (
-			<span class='text-gray-500'>There are no related posts yet. 😢</span>
+			<span class='text-gray-500'>No hay artículos relacionados aún. 😢</span>
 		)
 	}
 </section>
