--- a/src/components/PostCard.astro
+++ b/src/components/PostCard.astro
@@ -15,6 +15,7 @@ const {
 	<a class='relative overflow-hidden' href={`/post/${slug}/`}>
 		<Image
 			src={heroImage}
+			loading={'eager'}
 			width={600}
 			height={200}
 			format='webp'
@@ -56,10 +57,10 @@ const {
 				class='flex justify-center items-center dark:text-white rounded-full hover:translate-x-1 transition-transform duration-150 ease-in-out font-semibold gap-1 group'
 				aria-label={`go to ${title}`}
 			>
-				Leer post
+				Leer artículo
 				<span class='mt-[1px] group-hover:rotate-45 transition-transform duration-250 ease-in-out'
-					><ArrowUp width='18' height='18' /></span
-				>
+					><ArrowUp width='18' height='18' />
+				</span>
 			</a>
 		</footer>
 	</div>
