--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -17,7 +17,7 @@ const SOCIALNETWORKS = [
 
 	{
 		name: 'Twitter',
-		url: 'https://github.com/yefersontoloza1',
+		url: 'https://twitter.com/yefersontoloza1',
 		icon: TwitterIcon
 	}
 ]
