--- a/src/components/TitlePage.astro
+++ b/src/components/TitlePage.astro
@@ -2,7 +2,7 @@
 import Title from './Title.astro'
 import Shape from './icons/Shape.astro'
 type Props = {
-	title: string
+	title: string | unknown
 }
 
 const { title } = Astro.props
