added a new page about me and putting hover in head

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -24,7 +24,17 @@ const SOCIALNETWORKS = [
 ---
 
 <header class='relative flex items-center h-12 font-semibold'>
-	<a class='text-lg mr-auto' href='/'>Inicio</a>
+	<a class='text-lg mr-auto hover:opacity-70' href='/'>Inicio</a>
+	<div
+		class='flex flex-col gap-4 md:flex-row md:border-r-2 border-black pr-4 dark:border-white mx-2'
+	>
+		<HeaderLink
+			href='/about'
+			class='flex items-center gap-1 text-2xl md:text-base hover:opacity-70'
+		>
+			<TagIcon /> Sobre mi
+		</HeaderLink>
+	</div>
 
 	<div
 		id='astro-header-drawer'
@@ -36,7 +46,10 @@ const SOCIALNETWORKS = [
 			<div
 				class='flex flex-col gap-4 md:flex-row md:border-r-2 border-black pr-4 dark:border-white'
 			>
-				<HeaderLink href='/tags' class='flex items-center gap-1 text-2xl md:text-base'>
+				<HeaderLink
+					href='/tags'
+					class='flex items-center gap-1 text-2xl md:text-base hover:opacity-70'
+				>
 					<TagIcon /> Etiquetas
 				</HeaderLink>
 			</div>
@@ -44,7 +57,12 @@ const SOCIALNETWORKS = [
 			<div class='flex justify-center items-center md:justify-end gap-3 md:p-0'>
 				{
 					SOCIALNETWORKS.map((network) => (
-						<HeaderLink class='' href={network.url} target='_blank' aria-label={network.name}>
+						<HeaderLink
+							class='hover:opacity-70'
+							href={network.url}
+							target='_blank'
+							aria-label={network.name}
+						>
 							<span>{<network.icon />} </span>
 						</HeaderLink>
 					))
