--- a/src/components/Search.astro
+++ b/src/components/Search.astro
@@ -5,7 +5,7 @@ import '@pagefind/default-ui/css/ui.css'
 import SearchIcon from '@/components/icons/SearchIcon'
 ---
 
-<site-search id='search' class='ms-auto'>
+<site-search id='search' class='ms-auto hover:opacity-70'>
 	<button data-open-modal disabled class='flex items-center justify-center rounded-md gap-1'>
 		<SearchIcon />
 		<!-- <span class='md:hidden text-2xl'> Search</span> -->
