--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -12,10 +12,7 @@ export interface Props {
 
 const { title, description = siteConfig.description, ogImage, articleDate } = Astro.props
 const canonicalURL = new URL(Astro.url.pathname, Astro.site)
-const socialImageURL = new URL(
-	ogImage ? ogImage : '../assets/images/heroImage-primer-post.jpg',
-	Astro.url
-).href
+const socialImageURL = new URL(ogImage ? ogImage : '/iconBlog.jpg', Astro.url).href
 
 const titleSeparator = '•'
 
