improved color of text in dark mode

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -11,9 +11,9 @@ import BaseLayout from '@/layouts/BaseLayout'
 	</h5>
 
 	<p>
-		Soy <span class='font-bold italic text-blue-950'>Yeferson Toloza</span> un apasionado de la
-		tecnología y las finanzas, y este blog es mi espacio para compartir mis conocimientos y
-		opiniones sobre estos dos campos en constante evolución.
+		Soy <span class='font-bold italic text-blue-950 dark:text-blue-500'>Yeferson Toloza</span> un
+		apasionado de la tecnología y las finanzas, y este blog es mi espacio para compartir mis
+		conocimientos y opiniones sobre estos dos campos en constante evolución.
 	</p>
 	<h5 class='font-extrabold text-blue-800'>En este blog, encontrarás artículos sobre:</h5>
 	<p>
@@ -45,8 +45,7 @@ import BaseLayout from '@/layouts/BaseLayout'
 		este espacio. Quiero que este sea un lugar donde las personas puedan sentirse cómodas para
 		compartir sus ideas y opiniones.
 	</p>
-
-	<h6 class='font-bold text-black'>¡Gracias por leer!</h6>
+	<h6 class='font-bold text-black dark:text-blue-500'>¡Gracias por leer!</h6>
 </BaseLayout>
 
 <style>
