improved view in mode light and dark

--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -12,7 +12,7 @@ const tags = await getTags()
 			tags.map((tag) => (
 				<a
 					href={`/tags/${tag}`}
-					class='inline-block bg-gray-200  rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2'
+					class='inline-block bg-gray-300 dark:bg-gray-100  rounded-full px-3 py-1 text-sm font-semibold text-gray-800 mr-2 mb-2'
 				>
 					#{tag}
 				</a>
