--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -17,10 +17,12 @@ import BaseLayout from '@/layouts/BaseLayout'
 	</p>
 	<h5 class='font-extrabold text-blue-800'>En este blog, encontrarás artículos sobre:</h5>
 	<p>
-		- Tecnología: últimas noticias, tendencias, análisis y opiniones sobre el mundo tecnológico. -
-		Finanzas: consejos para invertir, ahorrar y gestionar tu dinero de forma inteligente. - Fintech:
-		la intersección entre la tecnología y las finanzas, y cómo está cambiando la forma en que
-		interactuamos con el dinero.
+		- Tecnología: últimas noticias, tendencias, análisis y opiniones sobre el mundo tecnológico.
+	</p>
+	<p>- Finanzas: consejos para invertir, ahorrar y gestionar tu dinero de forma inteligente.</p>
+	<p>
+		- Fintech: la intersección entre la tecnología y las finanzas, y cómo está cambiando la forma en
+		que interactuamos con el dinero.
 	</p>
 	<p>
 		También compartiré mis experiencias personales en el mundo de la tecnología y las finanzas, así
