remove props inncessary

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -13,7 +13,7 @@ type Props = {
 	readTime: string
 }
 
-const { data, readTime, headings, id } = Astro.props
+const { data, readTime } = Astro.props
 const { title, description, pubDate, heroImage, tags } = data
 
 const articleDate = pubDate.toISOString()
