--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -22,6 +22,19 @@ const SOCIALNETWORKS = [
 		icon: TwitterIcon
 	}
 ]
+
+export const navigations = [
+	{
+		href: '/about',
+		name: 'Sobre mi',
+		icon: AboutIcon
+	},
+	{
+		href: '/tags',
+		name: 'Etiquetas',
+		icon: TagIcon
+	}
+]
 ---
 
 <header class='relative flex items-center h-12 font-semibold'>
@@ -37,15 +50,16 @@ const SOCIALNETWORKS = [
 			<div
 				class='flex flex-col gap-4 md:flex-row md:border-r-2 border-black pr-4 dark:border-white'
 			>
-				<a href='/about' class='flex items-center gap-1 text-2xl md:text-base hover:opacity-70'>
-					<AboutIcon /> Sobre mi
-				</a>
-				<HeaderLink
-					href='/tags'
-					class='flex items-center gap-1 text-2xl md:text-base hover:opacity-70'
-				>
-					<TagIcon /> Etiquetas
-				</HeaderLink>
+				{
+					navigations.map((nav) => (
+						<HeaderLink
+							href={nav.href}
+							class='flex items-center gap-1 text-2xl md:text-base hover:opacity-70'
+						>
+							{<nav.icon />} {nav.name}
+						</HeaderLink>
+					))
+				}
 			</div>
 
 			<div class='flex justify-center items-center md:justify-end gap-3 md:p-0'>
