--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -14,9 +14,7 @@ const { title, description = siteConfig.description, ogImage, articleDate } = As
 const canonicalURL = new URL(Astro.url.pathname, Astro.site)
 const socialImageURL = new URL(ogImage ? ogImage : '/share-social-media.png', Astro.url).href
 
-const titleSeparator = '•'
-
-const siteTitle = `${title} ${titleSeparator} ${siteConfig.title}`
+const siteTitle = `${title} • ${siteConfig.title}`
 
 import { join } from 'path'
 import { AstroFont } from 'astro-font'
@@ -41,6 +39,7 @@ import { AstroFont } from 'astro-font'
 <meta name='title' content={siteTitle} />
 <meta name='description' content={description} />
 <meta name='author' content={siteConfig.author} />
+<meta name='robots' content='index, nofolow' />
 
 <!-- Open Graph / Facebook -->
 <meta property='og:type' content={articleDate ? 'article' : 'website'} />
@@ -66,6 +65,8 @@ import { AstroFont } from 'astro-font'
 
 <!-- RSS auto-discovery -->
 <link rel='alternate' type='application/rss+xml' title={siteConfig.title} href='/rss.xml' />
+
+ m
 
 <AstroFont
 	config={[
