--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,7 +3,7 @@ import TitlePage from '@/components/TitlePage'
 import BaseLayout from '@/layouts/BaseLayout'
 ---
 
-<BaseLayout title='Sobre-mi' description='página sobre mi'>
+<BaseLayout title='Sobre-mi'>
 	<TitlePage title='Sobre mi' />
 
 	<h5 class='text-gray-800 hover:text-xl font-bold transition-all'>
