add a new post and improve details of tags

--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -5,7 +5,7 @@ import { getTags } from '@/utils'
 const tags = await getTags()
 ---
 
-<BaseLayout title='Tags' description=''>
+<BaseLayout title='Etiquetas' description='Etiquetas relacionadas con los diferentes artículos'>
 	<TitlePage title='Etiquetas' />
 	<div class='flex justify-center flex-wrap gap-4'>
 		{
