--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,7 +3,7 @@ import TitlePage from '@/components/TitlePage'
 import BaseLayout from '@/layouts/BaseLayout'
 ---
 
-<BaseLayout title='Sobre-mi'>
+<BaseLayout title='Sobre' description='Pequeña descripción sobre Yeferson'>
 	<TitlePage title='Sobre mi' />
 
 	<h5 class='text-gray-800 hover:text-xl font-bold transition-all'>
@@ -11,7 +11,7 @@ import BaseLayout from '@/layouts/BaseLayout'
 	</h5>
 
 	<p>
-		Soy <span class='font-bold italic text-blue-950 dark:text-blue-500'>Yeferson Toloza</span> un
+		Soy <span class='font-bold italic text-blue-950 dark:text-blue-500'>Yeferson T</span>, un
 		apasionado de la tecnología y las finanzas, y este blog es mi espacio para compartir mis
 		conocimientos y opiniones sobre estos dos campos en constante evolución.
 	</p>
@@ -27,16 +27,16 @@ import BaseLayout from '@/layouts/BaseLayout'
 	<p>
 		También compartiré mis experiencias personales en el mundo de la tecnología y las finanzas, así
 		como consejos y recursos que he encontrado útiles.<br />
-		 Mi objetivo es crear un espacio donde las personas puedan aprender, compartir ideas y estar al
-		día con las últimas noticias y tendencias en tecnología y finanzas.
+		Mi objetivo es crear un espacio donde las personas puedan aprender, compartir ideas y estar al día
+		con las últimas noticias y tendencias en tecnología y finanzas.
 	</p>
 	<h5 class='font-extrabold text-blue-800'>Algunos datos sobre mí</h5>
 	<p>
 		- Soy un estudiante con experiencia en el sector tecnológico y financiero.<br />
-		 - Tengo una gran pasión por la educación y la divulgación.<br />
-		 - Me encanta aprender cosas nuevas y compartir mis conocimientos con los demás.<br />
-		 - Creo que la tecnología y las finanzas tienen el potencial de mejorar nuestras vidas, y quiero
-		ayudar a las personas a aprovechar al máximo estas herramientas.
+		- Tengo una gran pasión por la educación y la divulgación.<br />
+		- Me encanta aprender cosas nuevas y compartir mis conocimientos con los demás.<br />
+		- Creo que la tecnología y las finanzas tienen el potencial de mejorar nuestras vidas, y quiero ayudar
+		a las personas a aprovechar al máximo estas herramientas.
 	</p>
 	<h5 class='font-extrabold text-blue-800'>¿Qué puedes esperar de este blog?</h5>
 	<p>
