--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -26,7 +26,7 @@ const SOCIALNETWORKS = [
 export const navigations = [
 	{
 		href: '/about',
-		name: 'Sobre mi',
+		name: 'Sobre',
 		icon: AboutIcon
 	},
 	{
