--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ const MAX_POSTS = 5 // max number of posts to show on the home page
 const posts = await getPosts(MAX_POSTS)
 ---
 
-<BaseLayout title='Inicio'>
+<BaseLayout title='Inicio' description=''>
 	<TitlePage title='Tecnofinanzas' />
 	<ListCategories />
 
