--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,5 +3,5 @@ const today = new Date()
 ---
 
 <footer class='flex justify-center text-center items-center w-full px-16 h-28 border-t-2'>
-	&copy; {today.getFullYear()} Yeferson Toloza. Todos los derechos reservados.
+	&copy; {today.getFullYear()} Yeferson T. Todos los derechos reservados.
 </footer>
