--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -12,7 +12,11 @@ export interface Props {
 
 const { title, description = siteConfig.description, ogImage, articleDate } = Astro.props
 const canonicalURL = new URL(Astro.url.pathname, Astro.site)
-const socialImageURL = new URL(ogImage ? ogImage : '/share-social-media.png', Astro.url).href
+
+const socialImageURL = new URL(
+	ogImage === undefined ? '/share-social-media.png' : ogImage,
+	Astro.url
+).href
 
 const siteTitle = `${title} • ${siteConfig.title}`
 
